[gd_scene load_steps=5 format=3 uid="uid://djl24a6tu3dcp"]

[ext_resource type="Script" path="res://scripts/levels/level_5.gd" id="1_72u7l"]
[ext_resource type="PackedScene" uid="uid://cs6sy82mme6s4" path="res://scenes/ui/zoomies_ui.tscn" id="2_8qnsk"]
[ext_resource type="PackedScene" uid="uid://gi8h4kub3elw" path="res://scenes/cats/random.tscn" id="3_016xn"]
[ext_resource type="PackedScene" uid="uid://c4wfxjktfnjdu" path="res://scenes/timer.tscn" id="4_frncq"]

[node name="Level5" type="Node2D"]
script = ExtResource("1_72u7l")

[node name="ZoomiesUI" parent="." instance=ExtResource("2_8qnsk")]
position = Vector2(-960, -540)

[node name="Cat1" parent="." instance=ExtResource("3_016xn")]
unique_name_in_owner = true
position = Vector2(-907, -388)
scale = Vector2(0.3, 0.3)
default_boder_color = Color(0.733005, 0.733006, 0.733005, 1)
border_color_focus = Color(0.463838, 0.635312, 1, 1)

[node name="Cat2" parent="." instance=ExtResource("3_016xn")]
unique_name_in_owner = true
position = Vector2(-285, -388)
scale = Vector2(0.3, 0.3)
default_boder_color = Color(0.733005, 0.733006, 0.733005, 1)
border_color_focus = Color(0.463838, 0.635312, 1, 1)

[node name="Cat3" parent="." instance=ExtResource("3_016xn")]
unique_name_in_owner = true
position = Vector2(343, -388)
scale = Vector2(0.3, 0.3)
default_boder_color = Color(0.733005, 0.733006, 0.733005, 1)
border_color_focus = Color(0.463838, 0.635312, 1, 1)

[node name="Cat4" parent="." instance=ExtResource("3_016xn")]
unique_name_in_owner = true
position = Vector2(-907, -16)
scale = Vector2(0.3, 0.3)
default_boder_color = Color(0.733005, 0.733006, 0.733005, 1)
border_color_focus = Color(0.463838, 0.635312, 1, 1)

[node name="Cat5" parent="." instance=ExtResource("3_016xn")]
unique_name_in_owner = true
position = Vector2(-285, -16)
scale = Vector2(0.3, 0.3)
default_boder_color = Color(0.733005, 0.733006, 0.733005, 1)
border_color_focus = Color(0.463838, 0.635312, 1, 1)

[node name="Cat6" parent="." instance=ExtResource("3_016xn")]
unique_name_in_owner = true
position = Vector2(343, -16)
scale = Vector2(0.3, 0.3)
default_boder_color = Color(0.733005, 0.733006, 0.733005, 1)
border_color_focus = Color(0.463838, 0.635312, 1, 1)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="LevelTimer" parent="." instance=ExtResource("4_frncq")]

[connection signal="ready" from="." to="." method="_on_ready"]
